Fix extra space between lines of comments in tracker edit popup
git-svn-id: http://svn.egroupware.org/egroupware/trunk@46750 923e3c2e-ae13-0410-ba18-ced7211e33de

--- a/tracker/templates/default/app.css
+++ b/tracker/templates/default/app.css
@@ -34,3 +34,4 @@ label.tracker_trIdEdit:before { content: "#"; }
 
 /* Restricted access replies */
 .reply_visible_1 { border: 1px dashed gray; }
+.reply_visible_* { white-space: normal; }
